add : ajout d'une méthode pour savoir si une tuile peut encore avori des voisins fix : changement de l'affichage des tuiles pour un rendu plus simple + correction d'un getteur sur les tuiles